apps/salesforce/force-app/main/default/objects/DocEngine_Button_Config__c/DocEngine_Button_Config__c.object-meta.xml
<CustomObject>
    <description>Record-button presets for DocEngine (template lookup, fill, export, preview). Replaces DocEngine_Button__mdt.</description>
    <label>DocEngine Button Config</label>
    <nameField>
        <label>Config Label</label>
        <length>80</length>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocEngine Button Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>