apps/salesforce/force-app/main/default/objects/DocEngine_Button_Config__c/fields/Attach_To_Record__c.field-meta.xml
<CustomField>
    <fullName>Attach_To_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>
      When true, Finish saves the DocEngine instance and also attaches a PDF/HTML file
      to the current record (Files and Notes &amp; Attachments). Format follows Export Mode
      (pdf or html; defaults to html when Export Mode is none).
    </description>
    <label>Attach to Record Files</label>
    <type>Checkbox</type>
</CustomField>