apps/salesforce/force-app/main/default/objects/DocEngine_Button_Config__c/fields/Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Developer_Name__c</fullName>
    <description>Matches Quick Action lookup key, e.g. Account_Generate_Document.</description>
    <externalId>true</externalId>
    <label>Developer Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>