apps/salesforce/force-app/main/default/objects/DocEngine_Button_Config__c/fields/Export_Mode__c.field-meta.xml
<CustomField>
    <fullName>Export_Mode__c</fullName>
    <label>Export Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>pdf</fullName>
                <label>PDF</label>
            </value>
            <value>
                <fullName>html</fullName>
                <label>HTML</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>