apps/salesforce/force-app/main/default/objects/DocEngine_Button_Config__c/fields/Fill_Mode__c.field-meta.xml
<CustomField>
    <fullName>Fill_Mode__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When true, open the fill editor. When false, merge and finish automatically.</description>
    <label>Filling On</label>
    <type>Checkbox</type>
</CustomField>