apps/salesforce/force-app/main/default/objects/DocEngine_Button_Config__c/fields/Hide_Empty__c.field-meta.xml
<CustomField>
    <fullName>Hide_Empty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, Run mode preview and HTML export hide empty field values.</description>
    <label>Hide Empty Fields</label>
    <type>Checkbox</type>
</CustomField>