apps/salesforce/force-app/main/default/objects/DocEngine_Button_Config__c/fields/Show_Preview__c.field-meta.xml
<CustomField>
    <fullName>Show_Preview__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When true, open PDF preview before finishing export/save.</description>
    <label>Show Preview</label>
    <type>Checkbox</type>
</CustomField>