apps/salesforce/force-app/main/default/objects/DocEngine_Button_Config__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Document template opened by this button.</description>
    <label>Template</label>
    <referenceTo>DocEngine_Template__c</referenceTo>
    <relationshipLabel>Button Configs</relationshipLabel>
    <relationshipName>Button_Configs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>